# baja

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  IMPROVEMENTS.md  LAVALINK_API_REFERENCE.md  LAVALINK_INTERNALS.md  LAVALINK_WEBSOCKET_EVENTS.md  LICENSE  MEMORY_SAFETY_RESEARCH.md  NOTICE  README.md  audio_flow_jiosaavn.md  build.rs  config.default.toml  config.example.toml  config.toml  docker-compose.yml  file_map.md  guide.md  node_report.md  repost.md  rustfmt.toml  workflow.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  release.yml
docs/: astro.config.mjs
docs/guide/: pterodactyl.md
docs/src/style/: custom.css
src/: api.rs  config.rs  lib.rs  main.rs  player.rs  server.rs  source.rs  types.rs
src/api/: events.rs  info.rs  mod.rs  models.rs  opcodes.rs  routeplanner.rs  session.rs  stats.rs  tracks.rs
src/audio/: buffer.rs  buffer_pool.rs  constants.rs  deezer_reader.rs  flow_controller.rs  hls_reader.rs  mod.rs  processor.rs  reader.rs  ring_buffer.rs
src/audio/buffer/: mod.rs  pool.rs  ring.rs
src/audio/codec/: mod.rs  opus_decoder.rs  opus_encoder.rs
src/audio/codecs/: mod.rs  opus.rs
src/audio/deezer/: mod.rs
src/audio/demux/: format.rs  mod.rs  webm_opus.rs
src/audio/effects/: crossfade.rs  fade.rs  mod.rs  tape.rs  volume.rs
src/audio/engine/: encoder.rs  mod.rs  passthrough.rs  transcode.rs
src/audio/filters/: biquad.rs  channel_mix.rs  (+22 more)
src/common/: banner.rs  errors.rs  http.rs  logger.rs  mod.rs  types.rs  utils.rs
src/config/: server.rs
src/configs/: base.rs  filters.rs  jiosaavn.rs  logging.rs  lyrics.rs  mirrors.rs  mod.rs  player.rs  route_planner.rs  server.rs  sources.rs  spotify.rs
src/gateway/: constants.rs  encryption.rs  engine.rs  mod.rs  session.rs  udp_link.rs
src/lyrics/: bilibili.rs  deezer.rs  genius.rs  letrasmus.rs  lrclib.rs  mod.rs  musixmatch.rs  netease.rs  yandex.rs  youtube.rs  youtubemusic.rs
src/monitoring/: mod.rs  stats_collector.rs
src/playback/: mod.rs  player.rs  state.rs
src/player/: context.rs  decoder.rs  mod.rs  playback.rs  player.rs  state.rs
src/protocol/: events.rs  info.rs  mod.rs  models.rs  opcodes.rs  session.rs  stats.rs  tracks.rs
src/rest/: handlers.rs  mod.rs  models.rs
src/routeplanner/: mod.rs
src/server/: app_state.rs  mod.rs  playback.rs  session.rs  session_manager.rs  stats.rs  voice.rs
src/sources/: applemusic.rs  deezer.rs  http.rs  http_stream.rs  jiosaavn.rs  manager.rs  mod.rs  plugin.rs  spotify.rs  youtube.rs
src/track/: track.rs
src/transport/: http_server.rs  middleware.rs  mod.rs  websocket_server.rs
src/types/: error.rs  messages.rs  mod.rs  player.rs  routeplanner.rs  track.rs
src/voice/: dave.rs  engine.rs  gateway.rs  mod.rs  udp.rs
src/ws/: handler.rs  messages.rs  mod.rs  ops.rs
(+236 files in other folders)
