[package]
name = "baja"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "^0.22.1"
flume = "^0.11.1"
dashmap = "^6.1.0"
dotenv = "^0.15.0"
tracing = "^0.1.41"
tracing-subscriber = "^0.3.20"
futures = "^0.3.31"
async-trait = "^0.1.89"
serde = { version = "^1.0.145", features = ["derive"] }
serde_json = "^1.0.145"
tower = "^0.5.2"
byteorder = "^1.5.0"
thiserror = "^2.0.17"
cap = "^0.1.2"
bytesize = "^2.1.0"
perf_monitor = "^0.2.1"
regex = "^1.12.2"
hex = "^0.4.3"
md5 = "^0.8.0"
blowfish = "^0.9.1"
cbc = "^0.1.2"
rand_agents = "^1.0.0"


symphonia = { version = "0.5.5", features = ["all"] }
davey = "0.1.1"
audiopus = "0.3.0-rc.0"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
rustypipe = { version = "0.11.4", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.21.0", features = ["v4", "v7", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
tokio = { version = "1.49.0", features = ["tracing", "macros", "signal", "rt-multi-thread"] }
rubato = "0.16.1"
axum = { version = "0.8.1", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
xsalsa20poly1305 = "0.9.1"

