[package]
name = "rustalink"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "^0.22.1"
flume = "^0.11.1"
dashmap = "^6.1.0"
tikv-jemallocator = "0.6.0"
tracing = "^0.1.41"
futures = "^0.3.31"
async-trait = "^0.1.89"
serde_json = "^1.0.145"
byteorder = "^1.5.0"
regex = "^1.12.2"
ipnet = "2.11.0"
rand = "0.8.5"
toml = "1.0.2"
davey = "0.1.1"
audiopus = "0.3.0-rc.0"
rubato = "0.16.1"
xsalsa20poly1305 = "0.9.1"
aes = "0.8"
des = "0.8.1"
cipher = "0.5.0"
block-padding = "0.4.2"
hex = "0.4.3"
blowfish = "0.9"
md-5 = "0.10"
cbc = "0.1"
urlencoding = "2.1.3"
rand_agents = "1.0.0"


tracing-subscriber = { version = "^0.3.20", features = ["env-filter"] }
serde = { version = "^1.0.145", features = ["derive"] }
symphonia = { version = "0.5.5", features = ["all"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
rustypipe = { version = "0.11.4", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.21.0", features = ["v4", "v7", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream", "cookies"] }
tokio = { version = "1.49.0", features = ["tracing", "macros", "signal", "rt-multi-thread"] }
axum = { version = "0.8.1", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

